# IMU_BMI160_ESP32

./: .gitattributes  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  tracker.py
filter/: accel_ekf  accel_ekf.cpp  accel_ekf.s  bmi160.csv  fusion_bmi160  fusion_bmi160.cpp  fusion_bmi160.s  fusioned.csv  fusioned_ekf.csv  fusioned_jerk.csv  jerk_calc  jerk_calc.cpp  run.sh
lib/BMI160-Arduino-master/: BMI160.h  BMI160Gen.cpp  CMakeLists.txt  ss_spi.s
main/: CMakeLists.txt  idf_component.yml  led_control.cpp  led_control.h  main.cpp  mode2_control.cpp  mode2_control.h
main/EKF/: ekf.cpp  ekf.h  konfig.h  matrix.cpp  matrix.h
main/Fusion/: Fusion.h  FusionAhrs.s  FusionCompass.s  FusionOffset.s
test/: a.txt
